fix text wrapping

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -175,8 +175,8 @@ button {
 @media (min-width: 380px) {
     .embed--between {
         .kicker, .title {
-            font-size: 38px;
-            line-height: 44px;
+            font-size: 36px;
+            line-height: 42px;
         }
     }
 }
